KYLIN-3290 Leverage getDecalredConstructor().newInstance() instead of newInstance()